# knot

./: .gitignore  AI_CONTEXT.md  CACHE_STRATEGY.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVLOG.md  IMPROVEMENT_COMMITS_PLAN.md  KNOT_CORE_QUALITY_ANALYSIS.md  LICENSE  LSP-ARCHITECTURE.md  PRE_LAUNCH_CHECKLIST.md  QUICKSTART.md  README.md  REFERENCE.md  SYNC_MAPPING_PLAN.md  TODO-31-01-2026.md  TODO.md  _idée.txt  idée.md  install.sh  knot-project-reference.txt  scripts-utiles.txt  test_python_wrapper.py
.github/workflows/: ci.yml  docs.yml  release.yml
crates/knot-cli/: Cargo.toml
crates/knot-cli/src/: lib.rs  main.rs
crates/knot-cli/tests/: integration_build.rs
crates/knot-core/: Cargo.toml  knot.toml
crates/knot-core/examples/: generate_defaults.rs
crates/knot-core/resources/: typst.R  typst.py
crates/knot-core/resources/python/: constants.py  executor.py  helpers.py  lsp.py  output.py  session.py
crates/knot-core/resources/r/: constants.R  executor.R  helpers.R  lsp.R  output.R  session.R
crates/knot-core/src/: backend.rs  cache.rs  codegen.rs  compiler.rs  config.rs  defaults.rs  graphics.rs  lib.rs  parser.rs  parser_v2.rs  project.rs
crates/knot-core/src/cache/: hashing.rs  metadata.rs  mod.rs  storage.rs
crates/knot-core/src/compiler/: chunk_processor.rs  execution.rs  formatters.rs  freeze.rs  inline_processor.rs  mod.rs  node_output.rs  options.rs  pipeline.rs  snapshot_manager.rs  sync.rs
crates/knot-core/src/compiler/snapshots/: knot_core__compiler__tests__assemble_pass_full_output_snapshot.snap
crates/knot-core/src/executors/: error_utils.rs  manager.rs  mod.rs  path_utils.rs  r.rs  side_channel.rs
crates/knot-core/src/executors/python/: execution.rs  formatters.rs  mod.rs  process.rs
crates/knot-core/src/executors/r/: execution.rs  file_manager.rs  formatters.rs  mod.rs  output_parser.rs  process.rs
crates/knot-core/src/parser/: ast.rs  indent.rs  mod.rs  options.rs  winnow_parser.rs
crates/knot-core/src/snapshots/: knot_core__backend__tests__format_chunk_dataframe_and_plot.snap  knot_core__backend__tests__format_chunk_dataframe_output.snap  knot_core__backend__tests__format_chunk_empty_name_no_figure_wrapper.snap  knot_core__backend__tests__format_chunk_empty_text_output.snap  knot_core__backend__tests__format_chunk_no_output.snap  knot_core__backend__tests__format_chunk_plot_output.snap  knot_core__backend__tests__format_chunk_text_and_plot.snap  knot_core__backend__tests__format_chunk_text_output_with_code.snap  knot_core__backend__tests__format_chunk_text_output_without_code.snap  knot_core__backend__tests__format_chunk_with_caption_no_name.snap  knot_core__backend__tests__format_chunk_with_codly_options.snap  knot_core__backend__tests__format_chunk_with_errors.snap  knot_core__backend__tests__format_chunk_with_name_and_caption.snap  knot_core__backend__tests__format_chunk_without_codly_options.snap  knot_core__backend__tests__format_codly_call.snap  knot_core__backend__tests__format_codly_call_empty.snap
crates/knot-core/tests/: README.md  integration_basic.rs  integration_execution.rs  integration_inline.rs  integration_multilanguage.rs  integration_python.rs  test_snapshots.rs
crates/knot-lsp/: Cargo.toml  ROADMAP.md
crates/knot-lsp/src/: diagnostics.rs  formatter.rs  lsp_methods.rs  main.rs  path_resolver.rs  position_mapper.rs  proxy.rs  server_impl.rs  state.rs  symbols.rs  transform.rs
crates/knot-lsp/src/handlers/: completion.rs  formatting.rs  hover.rs  mod.rs
docs/book/: book.toml
docs/book/src/: SUMMARY.md  chunk-options.md  chunks.md  cli.md  configuration.md  dev-architecture.md  dev-chunk-option.md  dev-contributing.md  dev-executors.md  dev-lsp.md  dev-pipeline.md  dev-testing.md  document-structure.md  extending.md  first-project.md  inline.md  installation.md  introduction.md  output-plots.md  output-tables.md  output-text.md  vscode.md
docs/dev-plans/: async-parallel-pipeline.md  chunk-customization.md  codebase-hardening-2026-02.md  document-backends.md  formatters.md  knot-preview-plan.md  lsp-diagnostics.md  lsp-navigation.md  master-plan.md  progressive-compilation.md  python-error-handling.md  r-error-handling.md  sync-mapping.md
docs/dev-plans/archives/: async-parallel-pipeline.md  execution-output-refactor.md  formatters.md  python-error-handling.md  r-error-handling.md  sync-mapping-retro.md  sync-mapping.md
editors/: README.md
editors/vscode/: .gitignore  .vscodeignore  QUICKSTART.md  README.md  TESTING.md  esbuild.js  eslint.config.mjs  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts  projectExplorer.ts  utils.ts
examples/: test-constant-objects.knot  test-syntax.knot  test-syntax.knot.R
examples/consolidated/: .gitignore  README.md  knot.toml  main.knot  mixed-analysis.knot  python-analysis.knot  r-analysis.knot  weather_data.csv
examples/demo/: .gitignore  main.knot
examples/demo-python/: knot.toml  main.knot
examples/demo-r/: main.knot  test-customization.knot
examples/demo-r-basicplot/: main.knot  typst.toml
examples/demo-r-combinedplots/: main.knot
examples/demo-r-ggplot/: main.knot
examples/graphics_options/: test_graphics_options.knot
examples/inline_expressions/: test_escaped.knot  test_inline.knot
examples/phase2_dataframes/: test_dataframes.knot
examples/phase4_plots/: test_cache.knot  test_minimal.knot  test_plots.knot  test_plots_phase4.knot  test_simple.knot
examples/simple-test/: main.knot
examples/simple-test/lib/: knot.typ
examples/simple_example/: main.knot  main.typ
examples/test-minimal/: knot.toml  main.knot
examples/test-python-plots/: main.knot
examples/tidymodels_demo/: README.md  chapter_demo.knot  simple_test.knot
knot-python-package/: README.md  pyproject.toml  setup.py
knot-python-package/knot/: __init__.py  core.py
knot-r-package/: DESCRIPTION  NAMESPACE
knot-r-package/R/: to_typst.R  typst.R
knot-typst-package/: lib.typ  typst.toml
scripts/: install-vscode-dev.sh
templates/: default.knot
templates/minimal/: knot.toml  main.knot
(+8 files in other folders)
