[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Pour le support LSP et le parsing
anyhow = "1.0"
chrono = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.8"
once_cell = "1.19"

# Pour le CLI
clap = { version = "4.5", features = ["derive"] }

# Pour l'intégration R (future)
# extendr-api = "0.7"
