[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knot"
version = "0.1.0"
description = "Python support for Knot literate programming with Typst"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Knot Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.0"]
pandas = ["pandas>=1.0"]
plotnine = ["plotnine>=0.8"]
all = ["matplotlib>=3.0", "pandas>=1.0", "plotnine>=0.8"]

[tool.setuptools]
packages = ["knot"]
