[package]
name = "knot-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "knot"
path = "src/main.rs"

[dependencies]
knot-core = { path = "../knot-core" }
clap = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
env_logger = "0.11.8"
log = "0.4.29"
pathdiff = "0.2"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3.24"
pathdiff = "0.2"
