[package]
name = "knot-cli"
version = "0.2.4"
edition = "2024"
repository = "https://github.com/knot-literate-programming/knot"

[[bin]]
name = "knot"
path = "src/main.rs"

[dependencies]
knot-core = { path = "../knot-core" }
clap = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
dirs = "5.0"
env_logger = "0.11.8"
log = "0.4.29"
pathdiff = "0.2"
include_dir = "0.7"
notify = "6.1"
toml = "1"

[dev-dependencies]
tempfile = "3.24"
pathdiff = "0.2"
