[package]
name = "knot-core"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
once_cell = { workspace = true }
log = "0.4.29"
winnow = "0.7.14"
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
serde_yaml = "0.9.34"
