[package]
name = "knot-lsp"
version = "0.1.2"
edition = "2021"

[dependencies]
knot-core = { path = "../knot-core" }
tower-lsp = "0.20"
futures = "0.3"
tokio = { version = "1.35", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
log = "0.4"
env_logger = "0.11"
which = "6.0"
shellexpand = "3.1"
uuid = { version = "1.10", features = ["v4"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
