[package]
name = "knot-lsp"
version = "0.3.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/knot-literate-programming/knot"

[lints]
workspace = true

[dependencies]
knot-core = { path = "../knot-core" }
tower-lsp = "0.20"
futures = "0.3"
tokio = { version = "1.35", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
log = "0.4"
env_logger = "0.11"
which = "8"
shellexpand = "3.1"
uuid = { version = "1.10", features = ["v4"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
